# kalibr

./: README.md
aslam_apriltag2/: CMakeLists.txt  package.xml
aslam_apriltag2/include/aslam_apriltag2/: GLineSegment2D.h  pch.h
aslam_apriltag2/src/: FloatImage.cc  GrayModel.cc  Homography33.cc  Quad.cc  TagDetector.cc  UnionFindSimple.cc
aslam_apriltag2/src/example/: apriltags_demo.cpp
aslam_backend/: CMakeLists.txt  package.xml
aslam_backend/src/: BlockCholeskyLinearSystemSolver.cpp  DenseQRLinearSolverOptions.cpp  ErrorTermDs.cpp  JacobianContainer.cpp  Matrix.cpp  OptimizationProblem.cpp  Optimizer.cpp  Optimizer2.cpp  SparseBlockMatrixWrapper.cpp  SparseCholeskyLinearSolverOptions.cpp  SparseQrLinearSystemSolver.cpp  TrustRegionPolicy.cpp
aslam_backend/test/: ErrorTermTests.cpp  MatrixTestHarness.cpp  MatrixTestHarness.hpp  SparseMatrixTest.cpp  TestOptimizer.cpp
aslam_backend_expressions/: CMakeLists.txt  package.xml
aslam_backend_expressions/include/aslam_backend_expressions/: DesignVariableGenericVector.hpp  DesignVariableUnitQuaternion.hpp  ErrorTermEuclidean.hpp  EuclideanDirection.hpp  EuclideanExpression.hpp  EuclideanExpressionNode.hpp  EuclideanPoint.hpp  GenericMatrixExpression.hpp  GenericScalarExpression.hpp  GenericScalarExpressionNode.hpp  HomogeneousExpressionNode.hpp  HomogeneousPoint.hpp  MapTransformation.hpp  MappedEuclideanPoint.hpp  MappedHomogeneousPoint.hpp  MatrixExpressionNode.hpp  QuaternionExpression.hpp  RotationExpression.hpp  RotationQuaternion.hpp  ScalarExpression.hpp  ScalarExpressionNode.hpp  TransformationExpression.hpp  TransformationExpressionNode.hpp
aslam_backend_expressions/src/: ErrorTermTransformation.cpp  EuclideanDirection.cpp  EuclideanExpressionNode.cpp  EuclideanPoint.cpp  HomogeneousPoint.cpp  MapTransformation.cpp  MappedEuclideanPoint.cpp  MappedHomogeneousPoint.cpp  MappedRotationQuaternion.cpp  MatrixExpression.cpp  RotationExpressionNode.cpp  Scalar.cpp  ScalarExpression.cpp  ScalarExpressionNode.cpp  TransformationExpression.cpp  TransformationExpressionNode.cpp  Vector2RotationQuaternionExpressionAdapter.cpp
aslam_backend_expressions/test/: FixedPointNumberTest.cpp  GenericScalarExpressionTest.cpp  HomogeneousExpression.cpp  MatrixAndEuclideanExpression.cpp  QuaternionExpression.cpp
aslam_backend_python/: CMakeLists.txt  package.xml
aslam_backend_python/include/aslam_backend_python/: ExportAPrioriInformationError.hpp  (+1 more)
aslam_backend_python/src/: BSplineMotionError.cpp.unused  Backend.cpp  BackendExpressions.cpp  CompressedColumnMatrix.cpp  Descriptors.cpp  DesignVariable.cpp  ErrorTermTransformation.cpp  Frontend.cpp  JacobianContainer.cpp  OptimizerOptions.cpp  Time.cpp  TrustRegionPolicies.cpp  module.cpp
aslam_bsplines/: .gitignore  CMakeLists.txt  package.xml
aslam_bsplines/doc/: doxygen.config.in
aslam_bsplines/interp_rotation/: cummulativeTestPlots.py  cumulative.py  invariance.py  testManifoldBSplines.py  testThreeManifold.py
aslam_bsplines/src/: BSpline.cpp  DiffManifoldBSpline.cpp
aslam_bsplines/test/: DiffManifoldBSplineTests.hpp  NumericIntegratorTests.cpp  UnitQuaternionBSplineTests.cpp
aslam_bsplines_python/: CMakeLists.txt  package.xml  setup.py
aslam_bsplines_python/src/: BSplinePython.cpp
aslam_bsplines_python/test/: BSplinePoseTests.py  BSplineTests.py  DiffManifoldBSpline.py  DiffManifoldBSplineFittingExperiments.py  SplineTests.py
aslam_cameras/: CMakeLists.txt  package.xml
aslam_cameras/src/: BackProjection.cpp  CameraGeometryBase.cpp  EquidistantDistortion.cpp  FovDistortion.cpp  GlobalShutter.cpp  GridCalibrationTargetCheckerboard.cpp  GridCalibrationTargetCirclegrid.cpp  GridCalibrationTargetObservation.cpp  GridDetector.cpp  ImageMask.cpp  Landmark.cpp  MaskedCameraGeometry.cpp  OmniCameraGeometry.cpp  PinholeCameraGeometry.cpp  PinholeRSCameraGeometry.cpp  RadialTangentialDistortion.cpp  Triangulation.cpp
aslam_cameras/test/: DepthCameraGeometry.cpp  DoubleSphereCameraGeometry.cpp  EquidistantDistortion.cpp  FovDistortion.cpp  GridCalibration.cpp  PinholeCameraGeometry.cpp
aslam_cameras_april/: CMakeLists.txt  package.xml
aslam_cameras_april/src/: GridCalibrationTargetAprilgrid.cpp  createTargetPDF.py
aslam_cv_backend/: CMakeLists.txt  package.xml
aslam_cv_backend/src/: NCameraSystemDesignVariableContainer.cpp
aslam_cv_backend/test/: testReprojectionError.cpp
aslam_cv_backend_python/: CMakeLists.txt  package.xml
aslam_cv_backend_python/src/: CameraGeometryDesignVariableContainer.cpp  NCameraSystemDesignVariableContainer.cpp
aslam_cv_error_terms/: CMakeLists.txt  package.xml
aslam_cv_python/: CMakeLists.txt  package.xml  setup.py
aslam_cv_python/example/: prototype.py
aslam_cv_python/src/: CameraShutters.cpp  Descriptors.cpp  Frame.cpp  GridCalibration.cpp  ImageContainer.cpp  ImageSynchronizer.cpp  MatchingAlgorithms.cpp  MultiFrameFactory.cpp  Time.cpp  Undistorters.cpp
aslam_cv_serialization/: CMakeLists.txt  gen_files.py  package.xml
aslam_imgproc/: CMakeLists.txt  package.xml
aslam_imgproc/src/: UndistorterBase.cpp
aslam_incremental_calibration/: CMakeLists.txt  package.xml
aslam_incremental_calibration/aslam_incremental_calibration/: CMakeLists.txt  package.xml
aslam_incremental_calibration/aslam_incremental_calibration_python/: CMakeLists.txt  package.xml  setup.py
aslam_incremental_calibration/incremental_calibration/: CMakeLists.txt  package.xml
aslam_incremental_calibration/incremental_calibration_python/: CMakeLists.txt  package.xml
aslam_incremental_calibration/test/: AlgorithmsTest.cpp  LinearSolverTest.cpp  OptimizationProblemTest.cpp
aslam_incremental_calibration_python/: CMakeLists.txt  package.xml
aslam_incremental_calibration_python/src/: LinearSolver.cpp  module.cpp
aslam_sparse_block_matrix/: CMakeLists.txt  package.xml
aslam_sparse_block_matrix/src/: marginal_covariance_cholesky.cpp  sparse_helper.cpp
aslam_sparse_block_matrix/test/: sbm_gtest.hpp
aslam_splines/: CMakeLists.txt  package.xml
aslam_splines/src/: EuclideanBSplineDesignVariable.cpp
aslam_splines/test/: TestErrors.cpp
(+1025 files in other folders)
