<?xml version="1.0" encoding="utf-8"?>
<package format="2">
  <name>aslam_apriltag2</name>
  <description>aslam_apriltag2</description>
  <version>0.0.6</version>
  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <maintainer email="gzhou@anybotics.com">Guoxiang Zhou</maintainer>
  <author>Paul Furgale</author>
  <license>New BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
<!--   <build_depend>cmake_clang_tools</build_depend> -->

  <depend>cmake_modules</depend>
  <depend>eigen</depend>
  <depend>libopencv-dev</depend>
  <depend>libv4l-dev</depend>

<!--   <test_depend>cmake_code_coverage</test_depend> -->
  <test_depend>gtest</test_depend>
</package>
