<?xml version="1.0" encoding="utf-8"?>
<package format="2">
  <name>aslam_backend</name>
  <version>0.0.4</version>
  <description>aslam_backend</description>
  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <maintainer email="gzhou@anybotics.com">Guoxiang Zhou</maintainer>
  <author>Paul Furgale</author>
  <license>New BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
<!--   <build_depend>cmake_clang_tools</build_depend> -->

  <depend>aslam_sparse_block_matrix</depend>
  <depend>eigen</depend>
  <depend>sm_boost</depend>
  <depend>sm_logging</depend>
  <depend>sm_property_tree</depend>
  <depend>sm_random</depend>
  <depend>sm_timing</depend>
  <depend>suitesparse</depend>
  <depend>tbb</depend>

<!--   <test_depend>cmake_code_coverage</test_depend> -->
  <test_depend>gtest</test_depend>
</package>
