<?xml version="1.0"?>
<package format="2">
  <name>aslam_backend_expressions</name>
  <version>0.0.1</version>
  <description>aslam_backend_expressions</description>

  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <maintainer email="gzhou@anybotics.com">Guoxiang Zhou</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- List dependencies to system libs and other catkin packages here. -->

  <depend>aslam_backend</depend>
  <depend>aslam_sparse_block_matrix</depend>
  <depend>eigen</depend>
  <depend>sm_boost</depend>
  <depend>sm_kinematics</depend>
  <depend>sm_random</depend>
  <depend>sm_timing</depend>
  <depend>suitesparse</depend>

</package>




