<package format="2">
<name>aslam_bsplines</name>
  <description>
     aslam_bsplines
  </description>
  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <maintainer email="gzhou@anybotics.com">Guoxiang Zhou</maintainer>
  <version>0.0.1</version>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
<!--   <build_depend>cmake_clang_tools</build_depend> -->

  <depend>aslam_sparse_block_matrix</depend>
  <depend>eigen</depend>
  <depend>sm_common</depend>
  <depend>sm_eigen</depend>
  <depend>sm_kinematics</depend>
  <depend>sm_timing</depend>
  <depend>suitesparse</depend>

<!--   <test_depend>cmake_code_coverage</test_depend> -->
  <test_depend>gtest</test_depend>
</package>


