<?xml version="1.0" encoding="utf-8"?>
<package format="2">
  <name>aslam_bsplines_python</name>
  <version>0.0.1</version>
  <description>aslam_bsplines_python</description>
  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <maintainer email="gzhou@anybotics.com">Guoxiang Zhou</maintainer>
  <author>Paul Furgale</author>
  <license>New BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>aslam_bsplines</depend>
  <depend>aslam_sparse_block_matrix</depend>
  <depend>eigen</depend>
  <depend>sm_numpy_eigen</depend>
  <depend>python-scipy</depend>
  <depend>sm_common</depend>
  <depend>sm_kinematics</depend>
  <depend>sm_python_module</depend>
  <depend>suitesparse</depend>

<!--   <test_depend>cmake_code_coverage</test_depend> -->
</package>
