<?xml version="1.0" encoding="utf-8"?>
<package format="2">
  <name>aslam_cameras</name>
  <version>0.0.15</version>
  <description>
     aslam_cameras
  </description>
  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <maintainer email="gzhou@anybotics.com">Guoxiang Zhou</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!--<!-- <build_depend>cmake_clang_tools</build_depend> -->-->

  <depend>aslam_time</depend>
  <depend>eigen</depend>
  <depend>libopencv-dev</depend>
  <depend>sm_boost</depend>
  <depend>sm_common</depend>
  <depend>sm_eigen</depend>
  <depend>sm_kinematics</depend>
  <depend>sm_logging</depend>
  <depend>sm_opencv</depend>
  <depend>sm_property_tree</depend>
  <depend>sm_random</depend>

<!--   <test_depend>cmake_code_coverage</test_depend> -->
  <test_depend>gtest</test_depend>
</package>
