<?xml version="1.0"?>
<package format="2">
  <name>aslam_cv_backend</name>
  <version>0.0.8</version>
  <description>aslam_cv_backend</description>

  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <maintainer email="gzhou@anybotics.com">Guoxiang Zhou</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <!--<!-- <build_depend>cmake_clang_tools</build_depend> -->-->

  <depend>aslam_backend</depend>
  <depend>aslam_backend_expressions</depend>
  <depend>aslam_cameras</depend>
  <depend>aslam_sparse_block_matrix</depend>
  <depend>aslam_time</depend>
  <depend>sm_common</depend>
  <depend>sm_boost</depend>
  <depend>sm_eigen</depend>
  <depend>sm_kinematics</depend>
  <depend>sm_logging</depend>
  <depend>sm_opencv</depend>
  <depend>sm_property_tree</depend>
  <depend>sm_timing</depend>
  <depend>suitesparse</depend>

<!--   <test_depend>cmake_code_coverage</test_depend> -->
  <test_depend>gtest</test_depend>
</package>
