<?xml version="1.0"?>
<package format="2">
  <name>aslam_cv_backend_python</name>
  <version>0.0.19</version>
  <description>aslam_cv_backend_python</description>

  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <maintainer email="gzhou@anybotics.com">Guoxiang Zhou</maintainer>
  <license>New BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <!--<!-- <build_depend>cmake_clang_tools</build_depend> -->-->

  <depend>aslam_backend</depend>
  <depend>aslam_backend_expressions</depend>
  <depend>aslam_backend_python</depend>
  <depend>aslam_cameras</depend>
  <depend>aslam_cv_backend</depend>
  <depend>aslam_cv_error_terms</depend>
  <depend>aslam_cv_python</depend>
  <depend>aslam_sparse_block_matrix</depend>
  <depend>aslam_time</depend>
  <depend>aslam_splines</depend>
  <depend>libopencv-dev</depend>
  <depend>sm_numpy_eigen</depend>
  <depend>sm_common</depend>
  <depend>sm_opencv</depend>
  <depend>sm_python</depend>
  <depend>sm_python_module</depend>
  <depend>suitesparse</depend>

<!--   <test_depend>cmake_code_coverage</test_depend> -->
  <test_depend>gtest</test_depend>
</package>
