<?xml version="1.0"?>
<package format="2">
    <name>aslam_cv_python</name>
    <version>0.0.1</version>
    <description>aslam_cv_python</description>
    <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
    <maintainer email="gzhou@anybotics.com">Guoxiang Zhou</maintainer>
    <license>New BSD</license>
    <buildtool_depend>catkin</buildtool_depend>

    <depend>aslam_cameras</depend>
    <depend>aslam_cv_serialization</depend>
    <depend>aslam_imgproc</depend>
    <depend>aslam_time</depend>
    <depend>libopencv-dev</depend>
    <depend>sm_common</depend>
    <depend>sm_eigen</depend>
    <depend>sm_kinematics</depend>
    <depend>sm_opencv</depend>
    <depend>sm_python</depend>
    <depend>sm_python_module</depend>

</package>
